# iaweb2022g1-survey

./: .gitattributes  .gitignore  .prettierignore  README.md  package.json
Examples/WebGL/: WebGL_STri.html
Examples/WebGPU/: WebGPU_SimpleTriangle.html
babylon-js-example/: package.json
latex-src/: .gitattributes  Makefile  ref.bib  ref.examples.bib  survey.tex
latex-src/listings/: babylon-js-example.ts  helper.ts  helpers.ts  main.ts  shader.wgsl  three-js-example.ts
latex-src/listings/wasm/: lib_canvas.rs  lib_handle.rs  lib_render.rs  lib_shader.rs
latex-src/sections/: conclusion.tex  cross-platform.tex  examples.tex  fundamentals.tex  intro.tex  libraries.tex  performance.tex  practical-example.tex  rust.tex
rust-example/: index.html  package.json  vite.config.ts
rust-example/src/: index.ts
rust-example/wasm/: Cargo.toml
rust-example/wasm/src/: lib.rs
shared/src/: triangle.ts  vertex.ts
software/: README.md  package.json
threejs-example/: package.json  tsconfig.json
threejs-example/src/: main.ts
webgl-simple/: index.html  package.json
webgl-simple/src/: fragment-shader.glsl  main.ts  vertex-shader.glsl
webgpu-simple/: package.json  tsconfig.json
webgpu-simple/src/: main.ts  shader.wgsl
