[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
winit = "0.27"
wasm-bindgen = "0.2.63"
env_logger = "0.9.3"
log = "0.4.17"
wgpu = "0.14"
console_log = "0.2.0"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["Document", "Window", "Element"] }
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
